[gd_scene load_steps=25 format=2]

[ext_resource path="res://2DImages/PageTurnTest/page3.png" type="Texture" id=1]
[ext_resource path="res://2DImages/PageTurnTest/page2.png" type="Texture" id=2]
[ext_resource path="res://2DImages/PageTurnTest/page6.png" type="Texture" id=3]
[ext_resource path="res://2DImages/PageTurnTest/page5.png" type="Texture" id=4]
[ext_resource path="res://2DImages/PageTurnTest/page4.png" type="Texture" id=5]
[ext_resource path="res://2DImages/PageTurnTest/page7.png" type="Texture" id=6]
[ext_resource path="res://Scripts/3dPageTurn.gd" type="Script" id=7]
[ext_resource path="res://3DModels/Pages.fbx" type="PackedScene" id=8]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 4.8, 6.4 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 4.8, 6.4 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 4.8, 6.4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 4.8, 6.4 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 4 )

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 4.8, 6.4 )

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 3 )

[sub_resource type="PlaneMesh" id=11]
size = Vector2( 4.8, 6.4 )
subdivide_width = 16
subdivide_depth = 16

[sub_resource type="SpatialMaterial" id=12]
albedo_texture = ExtResource( 6 )

[sub_resource type="Animation" id=13]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PageA:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PageA:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1.00179e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PageA:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PageB:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PageC:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("PageA:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PageA:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PageA:rotation_degrees:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("PageA:rotation_degrees:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.00179e-05, -0.25, 0, 0.25, 0, 90, -0.141, -44.8705, 0.219, 56.653, 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("PageA:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PageB:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PageC:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PageB:translation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PageB:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1.00179e-05 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BookBodyModel:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("BookBodyModel:translation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.251, 0 ), Vector3( 0, -0.251, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("BookBodyModel:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("PageA:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PageA:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PageA:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PageB:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("PageB:rotation_degrees:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("PageB:rotation_degrees:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("PageB:rotation_degrees:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1.00179e-05, -0.25, 0, 0.25, 0, 90, -0.101, -77.7163, 0.0689999, 83.5268, 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/7/type = "value"
tracks/7/path = NodePath("PageB:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PageC:translation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("PageC:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("PageC:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.1, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("PageA:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PageB:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PageB:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PageB:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.001, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PageC:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.4, 0, 0 ) ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("PageC:rotation_degrees:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("PageC:rotation_degrees:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("PageC:rotation_degrees:z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 90, -0.101, -59.8004, 0.109, 65.6109, 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("PageC:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BookBodyModel:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("BookBodyModel:translation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -4.8, -0.251, 0 ), Vector3( -4.8, -0.251, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("BookBodyModel:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ), Vector3( 0, 0, 180 ) ]
}

[node name="3DPageTurnDemo" type="Spatial"]
script = ExtResource( 7 )
PageSpeedRatio = 1.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2.4, 5.681, 0 )
near = 0.38

[node name="PageA" type="Spatial" parent="."]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, -2.4, 0, 0 )

[node name="FrontPage" type="CSGMesh" parent="PageA"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4, 0, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="BackPage" type="CSGMesh" parent="PageA"]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 2.4, 0, 0 )
mesh = SubResource( 3 )
material = SubResource( 4 )

[node name="PageB" type="Spatial" parent="."]
transform = Transform( 0.999881, -0.0154316, 0, 0.0154316, 0.999881, 0, 0, 0, 1, -2.4, 0, 0 )

[node name="FrontPage" type="CSGMesh" parent="PageB"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4, 0, 0 )
mesh = SubResource( 5 )
material = SubResource( 6 )

[node name="BackPage" type="CSGMesh" parent="PageB"]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 2.4, 0, 0 )
mesh = SubResource( 7 )
material = SubResource( 8 )

[node name="PageC" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4, 0, 0 )

[node name="FrontPage" type="CSGMesh" parent="PageC"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4, 0, 0 )
mesh = SubResource( 9 )
material = SubResource( 10 )

[node name="BackPage" type="CSGMesh" parent="PageC"]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 2.4, 0, 0 )
mesh = SubResource( 11 )
material = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 13 )
anims/TurnPageA = SubResource( 14 )
anims/TurnPageB = SubResource( 15 )
anims/TurnPageC = SubResource( 16 )

[node name="BookBodyModel" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.251, 0 )
